<resources>
    <string name="app_name">Random Number Picker</string>
    <string name="max">Angka Maksimal</string>
    <string name="kalimat">Masukan angka maksimal untuk dicari angka acaknya. Hasil angka random akan berkisar antara satu hingga angka maksimal</string>
    <string name="generate">Generate</string>
    <string name="hasil_x">Random Number: %1$.f</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="tombol_masuk">Mulai Random Picker</string>
    <string name="welcome">Welcome</string>
    <string name="pengaturan_decs">Di menu ini Anda dapat mengatur aplikasi sesuai dengan preferensi Anda.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Random Number Picker merupakan sebuah aplikasi Android untuk mencari angka secara acak dengan meng-input angka maksimal.\n\nAplikasi ini dibuat untuk kelas
Mobpro 1. Temukan kodenya di https://github.com/AlifFadhlan/asesmen1mobpro\n\nCopyright © 2023 Alif Fadhlan Fadhilah.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Ikuti saya di Github: https://github.com/AlifFadhlan/asesmen1mobpro</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_max">Max Number: %1$d</string>
    <string name="hasil_num">Random Number: %1$d</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="message">%1$s diklik!</string>
    <string name="faktaAngka">Fakta Angka</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Angka punya fakta unik!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>