<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/awalFragment">

    <fragment
        android:id="@+id/randomPickerFragment"
        android:name="org.d3if3063.asesmen1.ui.random.RandomPickerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_random_picker" >
        <action
            android:id="@+id/action_randomPickerFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_randomPickerFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
    </fragment>
    <fragment
        android:id="@+id/awalFragment"
        android:name="org.d3if3063.asesmen1.ui.AwalFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_awal">
        <action
            android:id="@+id/action_awalFragment_to_randomPickerFragment"
            app:destination="@id/randomPickerFragment" />
        <action
            android:id="@+id/action_awalFragment_to_mainAngkaFragment"
            app:destination="@id/mainAngkaFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3063.asesmen1.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if3063.asesmen1.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori"/>
    <fragment
        android:id="@+id/mainAngkaFragment"
        android:name="org.d3if3063.asesmen1.ui.faktaAngka.MainAngkaFragment"
        android:label="@string/faktaAngka"
        tools:layout="@layout/fragment_main"/>
</navigation>